--- a/Tuter/res/values/strings.xml
+++ b/Tuter/res/values/strings.xml
@@ -6,12 +6,11 @@
     <string name="tuter_version">v1.0</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    
     <string name="welcome_welcomeText">Welcome</string>
     <string name="welcome_logIn">Log In</string>
     <string name="welcome_signUp">Sign Up</string>
     <string name="welcome_search">Search</string>
-    
+
     <!-- SearchActivity Strings -->
     <string name="search_courseLabel">Course</string>
     <string name="search_courseHint">Course (e.g. MATH 211)</string>
@@ -21,16 +20,13 @@
     <string name="search_paidLabel">Paid</string>
     <string name="search_searchButton">Search</string>
     <string name="searchResults_results">Results</string>
-    
     <string name="title_activity_search">Search Tutors</string>
     <string name="action_settings">Settings</string>
-    
+
     <!-- SearchResultsActivity Strings -->
     <string name="title_activity_search_results">Search Results</string>
-    
-    
     <string name="title_activity_google_map_v2">GoogleMapV2</string>
-    
+
     <!-- LogInActivity and SignUpActivity Strings -->
     <string name="prompt_email">Email</string>
     <string name="prompt_reenterPassword">Confirm Password</string>
@@ -44,12 +40,13 @@
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
-
     <string name="signup_checkbox_student">Student</string>
     <string name="signup_checkbox_tutor">Tutor</string>
     <string name="signup_im_a">I\'m a</string>
 
-    
-	<!-- Dummy Text -->
+    <!-- Dummy Text -->
     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
+    <string name="title_activity_show_user">ShowUserActivity</string>
+    <string name="loading">Loading...</string>
+
 </resources>
