--- a/Tuter/res/values/strings.xml
+++ b/Tuter/res/values/strings.xml
@@ -26,10 +26,14 @@
     <!-- SearchResultsActivity Strings -->
     <string name="title_activity_search_results">Search Results</string>
     <string name="title_activity_google_map_v2">GoogleMapV2</string>
-    
+
     <!-- ShowUserActivity Strings -->
     <string name="tutor_details">Age:\t#{AGE}\nYear:\t#{YEAR}\nRate:\t#{RATE}</string>
     <string name="show_user_groups">Tutoring Groups</string>
+    
+    <!-- ShowGroupActivity String -->
+    <string name="show_group_tutors_header">Tutors</string>
+    <string name="show_group_students_header">Students</string>
 
     <!-- LogInActivity and SignUpActivity Strings -->
     <string name="prompt_email">Email</string>
@@ -51,6 +55,7 @@
     <!-- Dummy Text -->
     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
     <string name="title_activity_show_user">User Profile</string>
-    <string name="loading">Loading...</string>
+    <string name="loading">Loading&#8230;</string>
+    <string name="title_activity_show_group">ShowGroupActivity</string>
 
 </resources>
