--- a/Tuter/res/values/strings.xml
+++ b/Tuter/res/values/strings.xml
@@ -51,7 +51,9 @@
     <string name="signup_checkbox_student">Student</string>
     <string name="signup_checkbox_tutor">Tutor</string>
     <string name="signup_im_a">I\'m a</string>
-
+	
+    <!-- Error messages -->
+    <string name="network_err_msg">Network Error. Fail to connect to server.</string>
     <!-- Dummy Text -->
     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
     <string name="title_activity_show_user">User Profile</string>
