Add refresh button to tutor list

--- a/Tuter/res/values/strings.xml
+++ b/Tuter/res/values/strings.xml
@@ -54,6 +54,8 @@
 	
     <!-- Error messages -->
     <string name="network_err_msg">Network Error. Fail to connect to server.</string>
+    <string name="refresh_button">Refresh</string>
+    
     <!-- Dummy Text -->
     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
     <string name="title_activity_show_user">User Profile</string>
