Working on displaying organizations; broken code

--- a/Tuter/res/values/strings.xml
+++ b/Tuter/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="welcome_logIn">Log In</string>
     <string name="welcome_signUp">Sign Up</string>
     <string name="welcome_search">Search</string>
+    <string name="welcome_Organizations">Organizations</string>
 
     <!-- SearchActivity Strings -->
     <string name="search_courseLabel">Course</string>
@@ -26,7 +27,7 @@
     <!-- SearchResultsActivity Strings -->
     <string name="title_activity_search_results">Search Results</string>
     <string name="title_activity_google_map_v2">GoogleMapV2</string>
-    
+
     <!-- ShowUserActivity Strings -->
     <string name="tutor_details">Age:\t#{AGE}\nYear:\t#{YEAR}\nRate:\t#{RATE}</string>
 
@@ -51,5 +52,7 @@
     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
     <string name="title_activity_show_user">ShowUserActivity</string>
     <string name="loading">Loading...</string>
+    <string name="title_activity_view_organizations">View Organizations</string>
+    <string name="title_activity_show_organization">Organization</string>
 
 </resources>
